@@ -1,11 +1,11 @@
 /*
- * Copyright 2023 the original author or authors.
+ * Copyright 2024 the original author or authors.
  * <p>
- * Licensed under the Apache License, Version 2.0 (the "License");
+ * Licensed under the Moderne Source Available License (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
+ * https://docs.moderne.io/licensing/moderne-source-available-license
  * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,7 +17,6 @@ package org.openrewrite.gradle.spring;
 
 import org.junit.jupiter.api.Test;
 import org.openrewrite.DocumentExample;
-import org.openrewrite.Tree;
 import org.openrewrite.gradle.marker.GradlePluginDescriptor;
 import org.openrewrite.gradle.marker.GradleProject;
 import org.openrewrite.maven.tree.MavenRepository;
@@ -42,11 +41,10 @@ class AddSpringDependencyManagementPluginTest implements RewriteTest {
                   id "java"
                   id "org.springframework.boot" version "1.5.22.RELEASE"
               }
-              
               repositories {
                   mavenCentral()
               }
-              
+              dependencyManagement { }
               dependencies {
                   compile "org.springframework.boot:spring-boot-starter-web"
               }
@@ -57,11 +55,10 @@ class AddSpringDependencyManagementPluginTest implements RewriteTest {
                   id "org.springframework.boot" version "1.5.22.RELEASE"
                   id "io.spring.dependency-management" version "1.0.6.RELEASE"
               }
-              
               repositories {
                   mavenCentral()
               }
-              
+              dependencyManagement { }
               dependencies {
                   compile "org.springframework.boot:spring-boot-starter-web"
               }
@@ -82,11 +79,10 @@ class AddSpringDependencyManagementPluginTest implements RewriteTest {
                   id "java"
                   id "org.springframework.boot" version "2.6.15"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
               dependencies {
                   implementation platform("org.springframework.boot:spring-boot-starter-dependencies:2.6.15")
                   implementation "org.springframework.boot:spring-boot-starter-web"
@@ -97,20 +93,19 @@ class AddSpringDependencyManagementPluginTest implements RewriteTest {
     }
 
     private static GradleProject gradleProject(GradlePluginDescriptor... gradlePlugins) {
-        return new GradleProject(
-          Tree.randomId(),
-          "example",
-          ":",
-          List.of(gradlePlugins),
-          Collections.emptyList(),
-          Collections.singletonList(MavenRepository.builder()
+        return GradleProject.builder()
+          .group("group")
+          .name("example")
+          .version("version")
+          .path(":")
+          .plugins(List.of(gradlePlugins))
+          .mavenRepositories(Collections.singletonList(MavenRepository.builder()
             .id("Gradle Central Plugin Repository")
             .uri("https://plugins.gradle.org/m2")
             .releases(true)
             .snapshots(true)
-            .build()),
-          Collections.emptyMap()
-        );
+            .build()))
+          .build();
     }
 
     private static GradlePluginDescriptor springBootPlugin() {
